--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ numpy==1.23.1
     # via opencv-python
 opencv-python==4.6.0.66
     # via -r requirements.in
+pillow==9.2.0
+    # via -r requirements.in
 pydantic==1.9.1
     # via fastapi
 sniffio==1.2.0
